# iridescence_vcpkg

./: CMakeLists.txt  build_debug.bat  build_debug_2022.bat  build_release_2022.bat  rebuild_release_2022.bat  vcpkg.json
example/: 02_light_viewer_primitives.cpp  CMakeLists.txt
source/: CMakeLists.txt
source/include/glk/primitives/: primitives.hpp
source/src/glk/: path_std.cpp
source/src/glk/primitives/: primitives.cpp
source/src/guik/: gl_canvas.cpp  imgui_application.cpp  model_control.cpp
source/src/guik/camera/: fps_camera_control.cpp
